@@ -7,6 +7,7 @@
 - compat-27: Add ~make-decoded-time~.
 - compat-28: Add ~color-dark-p~.
 - compat-28: Add ~with-window-non-dedicated~.
+- compat-28: Add ~directory-files-and-attributes~ with COUNT argument.
 - compat-29: Add ~compiled-function-p~.
 - compat-29: Add ~plist-get~ generalized variable.
 - compat-29: Add ~plistp~.
